
ChangeLog
 [ + added, - removed, * changed ]
 * 19Sep2018 Fixes bug in variable declaration in 'free' wrapper
 * 18Sep2018 Fixes bug in OpenMP common wrapper hook points
 * 18Sep2018 Removes debug for OpenMP Fortran wrappers
 * 17Sep2018 Fixes race condition when issuing install in a parallel make (closes #18)
 * 17Sep2018 Fixes memory corruption when reading CPU frequency (closes #17)
 * 17Sep2018 Translates UF symbol addresses to find symbols in dynamic libraries
 * 17Sep2018 Increases maximum number of threads for IBM XL OMP runtime helpers to 256 and removes checks when the IBM runtime is not hooked
 * 17Sep2018 Adds wrapper for taskgroup construct in Intel runtime
 * 17Sep2018 Fixes dlsym loop when trying to obtain the pointer to calloc
 * 17Sep2018 Solves infinite loop when getting the real pointer for 'free'
 * 09Jul2018 Fixes compatibility of pyextrae with Python 3
 * 13Jun2018 Activates library auto-init by default in all tracing libraries (closes #5 #12)
 * 06Jun2018 Implements OpenMP Fortran wrappers
 * 05Jun2018 Refactors functions and structures used in the requests hash table
 * 01Jun2018 Clarifies mpimpi2prv error message when running with 1 task
 * 01Jun2018 Fixes wrong include in UF_xl_instrument.c
 * 01Jun2018 Compile MPI_Fetch_and_op, MPI_Compare_and_swap and MPI_Win_flush* only if MPI3 is supported
 * 31May2018 Fixes cudaStreamDestroy wrappers
 + 29May2018 Adds missing CUDA wrappers and callbacks for the creation and destruction of streams
 + 29May2018 Add $DESTDIR to src/others/Makefile.am to be able to create RPM's
 + 22May2018 Adds instrumentation support for MPI_Fetch_and_op, MPI_Compare_and_swap and MPI_Win_flush* routines (closes #2)
 * 18May2018 Fixed wrong format of tag in the prv trace that resulted in negative comm tags
 * 17May2018 Adds extrae_module.f90 to distribution
 + 15May2018 Added configure check for MPI_Get_accumulate, BullMPI does not implement this routine